Add JSONL and CSV output support to Schema
- add Schema JSONL export helpers for string output and streaming writes
- add Schema CSV export helpers that preserve field order and stream rows directly
- serialize nested maps, lists, and arrays as JSON cell values in CSV output
- preserve caller field order in schema copies so output headers stay stable
- add focused schema output tests for escaping, structured values, streaming behavior, and failure paths
- document the new schema output API in the schema and provider guide